# vgmdb-rust

./: Cargo.toml  Readme.md  invaild_json.txt
.github/workflows/: ci.yml  release.yml
data/: album_11999.json  album_14966.json  album_1547.json  album_18.json  album_24725.json  album_25985.json  album_40854.json  album_50946.json  album_885.json
data/albums/: album_6445.json  album_6988.json  album_81114.json
data/search/: Puella Magi Madoka.json
scripts/: metadata.json  tag_via_music_app.applescript
src/: client.rs  lib.rs  types.rs
src/types/: albums.rs  errors.rs  search.rs
