[package]
name = "vgmdb"
version = "0.4.0"
edition = "2021"

authors = ["Bilal Syed Hussain <bilalshussain@gmail.com>"]
description = "vgmdb api "
homepage = "https://github.com/Bilalh/vgmdb-rust"
repository= "https://github.com/Bilalh/vgmdb-rust"
license = "Apache-2.0"
readme = "Readme.md"
keywords = ["vgmdb", "music", "metadata" ]

[lib]
name = "vgmdb"
path = "src/lib.rs"

[dependencies]
log = "0.4.17"
reqwest = { version = "0.11", features = ["json"] }
serde = {version ="1.0.152", features = ["derive"]}
serde_json = "1.0.91"
thiserror = "1.0.38"

[dev-dependencies]
test-case = "2.2.2"
